ajout des fonctions d'extraction et generation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,10 @@
                 "--port",
                 "5001"
             ],
-            "justMyCode": false
+            "justMyCode": false,
+            "env": {
+                "PUBSUB_HOSTNAME": "localhost"
+            }
         },
     ]
 }
